--- a/src/components/Repo.css
+++ b/src/components/Repo.css
@@ -1,15 +1,22 @@
 .repo-card{
-  padding: 15px 0;
   width: 48%;
   margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.repo-car .card-header{
+.repo-card .card-header{
   background-color: #f50057;
-  color: #fff;
   padding: 15px 10px;
 }
 
-.repo-car .card-content{
+.repo-card .card-header h5{
+  color: #fff;
+  font-size: 1rem;
+}
+
+.repo-card .card-content{
   padding: 15px 10px;
+  
 }
